fix squished energy bar

--- a/styles.css
+++ b/styles.css
@@ -411,9 +411,16 @@ img {
 }
 
 /* Media Queries */
-@media only screen and (max-width:400px){
+@media screen and (max-width:400px){
 
-    /* Shrink life bars  */
+     .player-life-unit { 
+        height: 2vh;
+        min-width:4vw; 
+        border: solid white 2px;
+        background-color: blue;
+    }
+    
+
     .cpu-life-unit { 
         height: 2vh;
         min-width:4vw; 
@@ -421,13 +428,7 @@ img {
         background-color: red;
     }
     
-    .player-life-unit { 
-        height: 2vh;
-        min-width:4vw; 
-        border: solid white 2px;
-        background-color: blue;
-    }
-    
+   
     /* Increase size of hands */
     .computer-hand,
     .player-hand {
@@ -511,5 +512,9 @@ img {
         box-shadow: 0px 2px 5px rgb(25, 25, 25) inset 0px 1px 2px rgb(251, 251, 251);
         size: 50%;
     } */
+
+    .active-item {
+        border:2px solid white;
+    }
 
 }
